Added homepage container with emojis

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,3 +33,15 @@ a {
 .center {
 	justify-content: center;
 }
+
+.container{
+	background-color: antiquewhite;
+	width: 500px;
+	padding: 10px;
+}
+
+.emoji-container{
+	text-align: center;
+	font-size: 30px;
+}
+
