Added homepage container with emojis

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -43,5 +43,14 @@ a {
 .emoji-container{
 	text-align: center;
 	font-size: 30px;
+
+
 }
 
+input[type="radio"]{
+	display:none;
+}
+
+input[type="radio"]:checked{
+	background-color: chocolate;
+}
